# Programming-Notes-Code

./: .gitignore  README.md  readme.md
Android/: .gitignore  README.MD
Android/AAC-Sample/: .project  README.md  build.gradle  dependencies.gradle
Android/AndroidArchitectureComponent/: .project  README.MD  build.gradle
Android/AndroidAspectj/: README.md  build.gradle  buildlog.txt  buildlog11.txt  local.properties  readme.md
Android/AndroidIPC/: .project  build.gradle
Android/AndroidTestCode/: .project
Android/ApiDemos/: local.properties
Android/Dagger2AndroidInjection/: .project  README.MD  README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
Android/Dagger2AndroidInjectionWithComponentization/: README.MD  build.gradle  gradle.properties  settings.gradle
Android/Drawables/: README.md  build.gradle
Android/FlatBufferSample/: .project
Android/GooglePlay/: local.properties
Android/HotFix_Plugin/: README.md
Android/JNI/: README.md
Android/JNI/BionicAPI/app/: CMakeLists.txt
Android/JNI/BionicAPI/app/src/main/: AndroidManifest.xml
Android/JNI/BionicAPI/app/src/main/cpp/: bionic-api.c  bionic-api.cpp  bionic-api.h  com_ztiany_bionic_JniBridge.h  local-server.cpp  native-lib.c  native-lib.cpp  socket-api.cpp  socket-api.h  tcp.cpp  threads-api.cpp  udp.cpp
Android/JNI/BionicAPI/app/src/main/java/com/ztiany/bionic/: MainActivity.java
Android/JNI/BionicAPI/app/src/main/res/layout/: activity_main.xml
Android/JNI/BionicAPI/app/src/main/res/values/: strings.xml
Android/JNI/FmodAndroid/app/: CMakeLists.txt  build.gradle
Android/JNI/FmodAndroid/app/src/main/: AndroidManifest.xml
Android/JNI/FmodAndroid/app/src/main/cpp/: common_platform.cpp  play_sound.cpp
Android/JNI/FmodAndroid/app/src/main/java/com/ztiany/fmod/: MainActivity.java
Android/JNI/FmodAndroid/app/src/main/res/layout/: activity_main.xml
Android/KotlinInAndroid/: README.MD  build.gradle  local.properties
Android/LoaderProgress/: readme.md
Android/MobileGuard/: local.properties
Android/RecyclerView/: readme.md
Android/RxJava-Lmitative/: local.properties
Android/RxJava1/: build.gradle  java.md  stringList
Android/RxJava2/: README.MD  build.gradle  settings.gradle
Android/View/: build.gradle
Android/WebSerser/: local.properties
Android/WebView/: README.MD  readmd.md
Android/keepliveProcess/: local.properties
C/: .gitignore  README.MD
C&C++/: .gitignore
C&C++/C++Basic/: CMakeLists.txt
C&C++/C-Program/: CMakeLists.txt  README.md
C&C++/CForJNI/: CMakeLists.txt  FileUtils.c  FileUtils.h  Utils.c  native-lib.c
C&C++/c-program/: CMakeLists.txt  README.md
C&C++/c-program-enhance/: 01_array_pass.c  01_array_sort.c  CMakeLists.txt  README.md
C&C++/cmake/: CMake.md  CMake笔记.md  README.md
C&C++/cmake/Sample04/: CMakeLists.txt  main.c
C&C++/cmake/Sample04/Libs/: Lib.c
C&C++/cplusplus-program/: CMakeLists.txt  README.md
C/C-File/: CMakeLists.txt  ErrorHandle.c  WriteFile.c
C/C-Program/: CMakeLists.txt
C/note/: C语言数组.md  C语言简介.md  pointer.MD  printf函数与scanf函数说明.md  函数.md  变量存储类型.md  基础概念.md  头文件.md  字符串与字符数组.md  指针的大小到底是由谁决定？是多少？.md  数据类型.md  流程控制.md  计算机语言基础.md  运算符.md
DataStructure/DataStructure-c/: CMakeLists.txt  CompaniesLinkedList.c  CompaniesLinkedList.h  Main.c  README.md
DataStructure/DataStructure-c/sort/: Main.c
DataStructure/DataStructure-c/tree/: BinaryTree.c
DataStructure/DataStructure-c/笔记/: 数据结构与算法.md
DataStructure/Play-with-Algorithms/: BSMain.cpp  CMakeLists.txt  README.md
DataStructure/Play-with-Algorithms-1/: CMakeLists.txt  README.md
DataStructure/Play-with-Algorithms/sort/: SortMain.cpp  SortTestHelper.h
DataStructure/Play-with-Algorithms/sort-basic/: InsertSort.h  MergeSort.h  QuickSort.h  SortMain.cpp  SortTestHelper.h  Student.h
DataStructure/Play-with-Data-Structures/: README.md  build.gradle  settings.gradle
Gradle/: readme.md
Gradle/Gradle-AndroidTransformAPI/: README.MD
Gradle/Gradle-UseBuildSrc/: README.md  gradle.properties
Gradle/GradleBuild/: build.gradle
Gradle/GradleDependencies/: build.gradle  settings.gradle
Gradle/GradlePluginSample/: README.MD  settings.gradle
Gradle/UseBuildSrc/: build.gradle  settings.gradle
Groovy/: .gitignore  README.MD  settings.gradle
Groovy/Programming-Groovy/: README.MD  (+2 more)
Java/: .gitignore  README.md
JavaEE/: README.md
Kotlin/: README.md
Python/: .gitignore  readme.md
Web/: README.md
(+2663 files in other folders)
